# libUnixToOSX

./: .gitattributes  .gitignore  FIXMES.txt  Makefile.am  Makefile.in  Readme.md  TODO  XXX.txt  acinclude.m4  aclocal.m4  alloc.h  alloca.c  allocator.c  allocator.h  areadlink-with-size.c  areadlink.c  areadlink.h  areadlinkat-with-size.c  areadlinkat.c  argp-test-Info.plist  asnprintf.c  at-func.c  at-func2.c  basename-lgpl.c  basename.c  binary-io.h  bitrotate.h  brk.c  btowc.c  c-ctype.c  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strcaseeq.h  c-strncasecmp.c  canonicalize-lgpl.c  canonicalize.c  canonicalize.h  careadlinkat.c  careadlinkat.h  (+237 more)
.github/: dependabot.yml
.github/workflows/: codeql.yml
argp/: .gitignore  TODO
argp/MacPorts/: PortIndex  PortIndex.quick
argp/argp-standalone-1.3/: .gitattributes  .gitignore  Makefile.am  Makefile.in  TODO  acinclude.m4  aclocal.m4  ansi2knr.c  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pv.c  argp-pvh.c  argp-test.c  argp.h  config.h.in  configure  configure.ac  configure.scan  mempcpy.c  strchrnul.c  strndup.c
argp/argp-standalone-1.3/testsuite/: .gitignore  Makefile.am  Makefile.in  ex1-test  ex1.c  ex3.c  ex4.c  permute-test  run-tests
autoscan/: Makefile.am  Makefile.in
build-aux/: .gitattributes
compat/: README
compat/10.3.0/: README
compat/10.4u/: README  diff-getopt_h-since-Panther.diff  diff-nl_types_h-since-Panther.diff  diff-utmp_h-since-Jaguar.diff  diff-wchar_h-since-Panther.diff
compat/10.5/: README  diff-utmp_h-since-Tiger.diff
compat/10.6/: README  diff-ftw_h-since-Tiger.diff  diff-getopt_h-since-Tiger.diff  diff-nl_types_h-since-Tiger.diff  diff-utmp_h-since-Leopard.diff  diff-wchar_h-since-Tiger.diff
compat/10.7/: README  diff-nl_types_h-since-SnowLeopard.diff  diff-wchar_h-since-SnowLeopard.diff
compat/10.8/: README  diff-wchar_h-since-Lion.diff
compat/10.9/: README  diff-nl_types_h-since-Lion.diff  diff-utmp_h-since-SnowLeopard.diff  diff-wchar_h-since-MountainLion.diff
glthread/: lock.c  lock.h  thread.c  thread.h  threadlib.c  tls.c  tls.h
libUnixToOSX.xcodeproj/: project.pbxproj
libftw0/: LICENSE  Makefile.am  Makefile.in  README  ftw.c  ftw.h
m4/: alloca.m4  asm-underscore.m4  autoscan-warnings-for-OSX.m4  btowc.m4  c_extra.m4  canonicalize.m4  ccstdc.m4  chdir-long.m4  chdir-safer.m4  chown.m4  close-stream.m4  close.m4  closeout.m4  codeset.m4  configmake.m4  cycle-check.m4  dirent-safer.m4  dirent_h.m4  dirname.m4  double-slash-root.m4  dup.m4  dup2-obsolete.m4  dup2.m4  dup3.m4  eealloc.m4  environ.m4  errno_h.m4  error.m4  extensions.m4  extern-inline.m4  fallocate.m4  fcntl_h.m4  fpending.m4  ftruncate.m4  functions_extra.m4  getdelim.m4  getline.m4  getndelim2.m4  getopt.m4  gnulib-common.m4  (+47 more)
poll/MacPorts/: PortIndex  PortIndex.quick
poll/MacPorts/devel/poll-emulator/: Portfile
poll/poll-emulator/: .gitignore  CHANGELOG.md  INSTALL  Makefile.am  Makefile.in  Makefile.rej  Makefile_hardcoded  Makefile_nonAutomake.in  README.md  TODO  poll.po  pollemu.c  pollemu.h  polltest.c
